Finished StudentMapper implementation and related new AddressMapper.